# So2

Projekt/build-zad3_v2-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  so2_zad3  so2_zad3.cbp
Projekt/zad1/: CMakeLists.txt
Projekt/zad1/include/: Fork.hpp  Philosopher.hpp
Projekt/zad1/source/: Fork.cpp  Philosopher.cpp  main.cpp
Projekt/zad2/: CMakeLists.txt
Projekt/zad2/include/: Fork.hpp
Projekt/zad2/source/: Fork.cpp  Philosopher.cpp  RandomGenerator.cpp
Projekt/zad3/: CMakeLists.txt
Projekt/zad3/include/: Building.hpp  Elevator.hpp  Person.hpp  Queue.hpp
Projekt/zad3/source/: Building.cpp  Elevator.cpp  Person.cpp  Queue.cpp  main.cpp
Projekt/zad3_v2/: CMakeLists.txt
Projekt/zad3_v2/include/: Building.hpp  Elevator.hpp  Person.hpp  Queue.hpp  RandomGenerator.hpp  State.hpp
Projekt/zad3_v2/source/: Building.cpp  Elevator.cpp  Person.cpp  Queue.cpp  RandomGenerator.cpp  State.cpp  main.cpp
Projekt/zad3_v2_build/: CMakeCache.txt  Makefile  cmake_install.cmake  so2_zad3
